# o4a-eccentricity

./: .gitignore  LICENSE  README.md  pyproject.toml
models/: mass.py
notebooks/: analyze_event_with_dingo.ipynb  bayes_factor_lineplot.ipynb  eccentricity_distribution.ipynb  event_statistics_tables.ipynb  figure1_bf_lineplot.ipynb  figure2_glitch_marginalization.ipynb  figure3_eccentricity_distribution.ipynb  figure4_posterior_grid.ipynb  glitch_marginalization.ipynb  pdet_vs_egw.ipynb  posterior_grid_e_zeta.ipynb  ppd_eccentricity.ipynb  survival_function.ipynb  tables2_3_event_statistics.ipynb  velocity_dispersion_posterior.ipynb
scripts/: common_scripts.py  config.py  download_data.py  extra.py  formatting.py  project_to_chi_eff_moments.py
style/: paper.mplstyle  plot_style.py
